@startuml DER_BI_LOS_GDDES

!define DIMENSION_COLOR #E1F5FE
!define FACT_COLOR #FFF9C4

' Configuración general
skinparam linetype ortho
skinparam packageStyle rectangle

package "Dimensiones BI" {
    entity "BI_Tiempo" as tiempo DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        anio : INTEGER
        mes : INTEGER
        cuatrimestre : VARCHAR(255)
        semestre : VARCHAR(255)
    }

    entity "BI_Sede" as sede DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(255)
    }

    entity "BI_RangoEtarioAlumno" as rangoAlumno DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(20)
    }

    entity "BI_RangoEtarioProfesor" as rangoProfesor DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(20)
    }

    entity "BI_TurnoCurso" as turno DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(255)
    }

    entity "BI_CategoriaCurso" as categoria DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(255)
    }

    entity "BI_MetodoDePago" as metodoPago DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(255)
    }

    entity "BI_BloqueSatisfaccion" as satisfaccion DIMENSION_COLOR {
        * id : BIGINT <<PK>>
        --
        detalle : VARCHAR(255)
    }
}

package "Tablas de Hechos" {
    entity "BI_HechosInscripcionesCurso" as hechosInscripciones FACT_COLOR {
        * id : BIGINT <<PK>>
        --
        * id_tiempo : BIGINT <<FK>>
        * id_categoriaCurso : BIGINT <<FK>>
        * id_turnoCurso : BIGINT <<FK>>
        * id_sede : BIGINT <<FK>>
        --
        inscriptos : BIGINT
        rechazados : BIGINT
    }

    entity "BI_HechosCursadas" as hechosCursadas FACT_COLOR {
        * id : BIGINT <<PK>>
        --
        * id_tiempo : BIGINT <<FK>>
        * id_sede : BIGINT <<FK>>
        * id_categoriaCurso : BIGINT <<FK>>
        * id_turnoCurso : BIGINT <<FK>>
        * id_rangoAlumno : BIGINT <<FK>>
        * id_rangoProfesor : BIGINT <<FK>>
        * id_satisfaccion : BIGINT <<FK>>
        --
        fecha_inicio : SMALLDATETIME
        fecha_finalizacion : SMALLDATETIME
        aprobado : BIT
        nota_final : DECIMAL(5,2)
    }

    entity "BI_HechosInscripcionesFinal" as hechosInscripcionesFinal FACT_COLOR {
        * id : BIGINT <<PK>>
        --
        * id_tiempo : BIGINT <<FK>>
        * id_sede : BIGINT <<FK>>
        --
        inscriptos : INT
        ausentes : INT
    }

    entity "BI_HechosPagos" as hechosPagos FACT_COLOR {
        * id : BIGINT <<PK>>
        --
        * id_tiempo : BIGINT <<FK>>
        * id_sede : BIGINT <<FK>>
        * id_categoriaCurso : BIGINT <<FK>>
        --
        fecha_pago : SMALLDATETIME
        fecha_vencimiento : SMALLDATETIME
        monto_pago : DECIMAL(12,2)
        pago_fuera_termino : BIT
    }

    entity "BI_HechosFacturacion" as hechosFacturacion FACT_COLOR {
        * id : BIGINT <<PK>>
        --
        * id_tiempo : BIGINT <<FK>>
        * id_sede : BIGINT <<FK>>
        * id_categoriaCurso : BIGINT <<FK>>
        --
        monto_facturado : DECIMAL(12,2)
        monto_pagado : DECIMAL(12,2)
    }
}

' Relaciones BI_HechosInscripcionesCurso
hechosInscripciones }o--|| tiempo
hechosInscripciones }o--|| categoria
hechosInscripciones }o--|| turno
hechosInscripciones }o--|| sede

' Relaciones BI_HechosCursadas
hechosCursadas }o--|| tiempo
hechosCursadas }o--|| sede
hechosCursadas }o--|| categoria
hechosCursadas }o--|| turno
hechosCursadas }o--|| rangoAlumno
hechosCursadas }o--|| rangoProfesor
hechosCursadas }o--|| satisfaccion

' Relaciones BI_HechosInscripcionesFinal
hechosInscripcionesFinal }o--|| tiempo
hechosInscripcionesFinal }o--|| sede

' Relaciones BI_HechosPagos
hechosPagos }o--|| tiempo
hechosPagos }o--|| sede
hechosPagos }o--|| categoria

' Relaciones BI_HechosFacturacion
hechosFacturacion }o--|| tiempo
hechosFacturacion }o--|| sede
hechosFacturacion }o--|| categoria

legend right
  |= Color |= Descripción |
  | <back:DIMENSION_COLOR>   </back> | Tablas de Dimensión |
  | <back:FACT_COLOR>   </back> | Tablas de Hechos |
endlegend

@enduml
